@@ -1,3 +1,7 @@
+2004-09-18  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/exif-entry.c (exif_entry_fix): Enhance.
+
 2004-09-17  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/exif-entry.c (exif_entry_fix): New. Fixes any violations
